Added local file

--- a/quora_duplicate_detection.ipynb
+++ b/quora_duplicate_detection.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/jayteaftw/NLP-quora-duplicate-detection/blob/main/quora_duplicate_detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -21,6 +21,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sys\n",
+        "if \"/content/drive/\" in sys.executable:\n",
+        "    from google.colab import drive\n",
+        "    drive.mount('/content/gdrive/')\n",
+        "    path = '/content/gdrive/MyDrive/NLP_Final_Project/' \n",
+        "else:\n",
+        "    path = ''\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 2,
       "metadata": {
         "id": "X-Mog1K-ej0T"
@@ -29,7 +44,7 @@
       "source": [
         "import numpy as np \n",
         "import pandas as pd\n",
-        "from google.colab import drive\n"
+        "\n"
       ]
     },
     {
@@ -62,17 +77,14 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/gdrive/\n"
           ]
         }
       ],
-      "source": [
-        "drive.mount('/content/gdrive/')\n",
-        "path = '/content/gdrive/MyDrive/NLP_Final_Project/'"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -87,16 +99,16 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "PnqG78znbHWJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "PnqG78znbHWJ",
         "outputId": "6748bc59-78d8-4aa6-fcb9-bc49a12993cb"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(404290,)\n",
             "(404290, 5)\n"
@@ -116,15 +128,14 @@
       "cell_type": "code",
       "execution_count": 6,
       "metadata": {
-        "id": "KYYTtlNqbJka",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "KYYTtlNqbJka",
         "outputId": "db95d21c-7ae6-4629-8caa-00a812687af7"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array(['What is the step by step guide to invest in share market in india?',\n",
@@ -135,8 +146,9 @@
               "       'What is like to have sex with cousin?'], dtype=object)"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -394,16 +406,16 @@
       "cell_type": "code",
       "execution_count": 30,
       "metadata": {
-        "id": "Evn_hzLWDRoh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Evn_hzLWDRoh",
         "outputId": "c0fe80c6-f9b8-4fc1-cb25-dd5d942da17a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: sentence-transformers in /usr/local/lib/python3.10/dist-packages (2.2.2)\n",
@@ -493,29 +505,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from multiprocessing import Pool"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "R6nTVeh3kHKM"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from multiprocessing import Pool"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 38,
       "metadata": {
-        "id": "r9rbCmavDOAp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "r9rbCmavDOAp",
         "outputId": "ea4a4b39-5d1f-41a4-9b86-2b1ecd9cb015"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n"
           ]
@@ -654,8 +666,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "How can I develop android app? nan\n",
             "How can I create an Android app? nan\n",
@@ -663,22 +675,22 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "4841e786a60a4a9fa0152d84c86b0cbe",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "  0%|          | 0/404287 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "4841e786a60a4a9fa0152d84c86b0cbe"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Process ForkPoolWorker-9:\n",
             "Traceback (most recent call last):\n",
@@ -747,9 +759,9 @@
           ]
         },
         {
-          "output_type": "error",
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
@@ -823,11 +835,11 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
       "collapsed_sections": [
         "PdugqPIi9iGm"
       ],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -838,53 +850,41 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "4841e786a60a4a9fa0152d84c86b0cbe": {
+        "138c2a73eed74ba6ab13f9d9c7ae33f4": {
           "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
+          "model_name": "DescriptionStyleModel",
           "state": {
-            "_dom_classes": [],
             "_model_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
+            "_model_name": "DescriptionStyleModel",
             "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_e86357e782ea4a2e8e6be564b50b1af7",
-              "IPY_MODEL_3a2b16d73e8a408ca375b6d66b8da06c",
-              "IPY_MODEL_48ebc103db15413497c33dcea556ce59"
-            ],
-            "layout": "IPY_MODEL_582c6fa7dfd24856b5e891cf910bf83b"
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
           }
         },
-        "e86357e782ea4a2e8e6be564b50b1af7": {
+        "34130f0f9d57411aabef6aefc620e31b": {
           "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
+          "model_name": "ProgressStyleModel",
           "state": {
-            "_dom_classes": [],
             "_model_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
+            "_model_name": "ProgressStyleModel",
             "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_71966cbb88fe4d839b5b552d1a57a2e4",
-            "placeholder": "​",
-            "style": "IPY_MODEL_47815950a5654644a1b739d36934735e",
-            "value": "  0%"
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "bar_color": null,
+            "description_width": ""
           }
         },
         "3a2b16d73e8a408ca375b6d66b8da06c": {
           "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
+          "model_name": "FloatProgressModel",
           "state": {
             "_dom_classes": [],
             "_model_module": "@jupyter-widgets/controls",
@@ -905,10 +905,47 @@
             "value": 0
           }
         },
+        "47815950a5654644a1b739d36934735e": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_module_version": "1.5.0",
+          "model_name": "DescriptionStyleModel",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "DescriptionStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "description_width": ""
+          }
+        },
+        "4841e786a60a4a9fa0152d84c86b0cbe": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_module_version": "1.5.0",
+          "model_name": "HBoxModel",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "HBoxModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HBoxView",
+            "box_style": "",
+            "children": [
+              "IPY_MODEL_e86357e782ea4a2e8e6be564b50b1af7",
+              "IPY_MODEL_3a2b16d73e8a408ca375b6d66b8da06c",
+              "IPY_MODEL_48ebc103db15413497c33dcea556ce59"
+            ],
+            "layout": "IPY_MODEL_582c6fa7dfd24856b5e891cf910bf83b"
+          }
+        },
         "48ebc103db15413497c33dcea556ce59": {
           "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
+          "model_name": "HTMLModel",
           "state": {
             "_dom_classes": [],
             "_model_module": "@jupyter-widgets/controls",
@@ -928,8 +965,8 @@
         },
         "582c6fa7dfd24856b5e891cf910bf83b": {
           "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
+          "model_name": "LayoutModel",
           "state": {
             "_model_module": "@jupyter-widgets/base",
             "_model_module_version": "1.2.0",
@@ -980,8 +1017,8 @@
         },
         "71966cbb88fe4d839b5b552d1a57a2e4": {
           "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
+          "model_name": "LayoutModel",
           "state": {
             "_model_module": "@jupyter-widgets/base",
             "_model_module_version": "1.2.0",
@@ -1028,27 +1065,12 @@
             "top": null,
             "visibility": null,
             "width": null
-          }
-        },
-        "47815950a5654644a1b739d36934735e": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
           }
         },
         "a5e8ed176a0247449c7d8c2df33ed02e": {
           "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
+          "model_name": "LayoutModel",
           "state": {
             "_model_module": "@jupyter-widgets/base",
             "_model_module_version": "1.2.0",
@@ -1095,28 +1117,12 @@
             "top": null,
             "visibility": null,
             "width": null
-          }
-        },
-        "34130f0f9d57411aabef6aefc620e31b": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
           }
         },
         "b366bfd72c764a28b395121ad7117e53": {
           "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
+          "model_name": "LayoutModel",
           "state": {
             "_model_module": "@jupyter-widgets/base",
             "_model_module_version": "1.2.0",
@@ -1165,19 +1171,25 @@
             "width": null
           }
         },
-        "138c2a73eed74ba6ab13f9d9c7ae33f4": {
+        "e86357e782ea4a2e8e6be564b50b1af7": {
           "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
+          "model_name": "HTMLModel",
           "state": {
+            "_dom_classes": [],
             "_model_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
+            "_model_name": "HTMLModel",
             "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "HTMLView",
+            "description": "",
+            "description_tooltip": null,
+            "layout": "IPY_MODEL_71966cbb88fe4d839b5b552d1a57a2e4",
+            "placeholder": "​",
+            "style": "IPY_MODEL_47815950a5654644a1b739d36934735e",
+            "value": "  0%"
           }
         }
       }
