Fixed Bert Sentence Training Cell

--- a/quora_duplicate_detection.ipynb
+++ b/quora_duplicate_detection.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "X-Mog1K-ej0T"
       },
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "omhBufyrSTDt"
       },
@@ -85,24 +85,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DUYmQGxEi8XM",
-        "outputId": "ad4af9d7-0797-467a-bfb3-9ef9def8e91a"
+        "outputId": "3d3a9b6d-010f-4181-a88f-e8712b6bd885"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive/\n"
+            "cuda\n"
           ]
         }
       ],
-      "source": []
+      "source": [
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "print(device)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -115,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -144,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "-pVsecKfZB-1"
       },
@@ -331,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "5VqDBOcWSNev"
       },
@@ -371,9 +374,7 @@
         }
       ],
       "source": [
-        "dataset = CustomDataset(X_train,y)\n",
-        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-        "print(device)"
+        "dataset = CustomDataset(X_train,y)\n"
       ]
     },
     {
@@ -422,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -526,7 +527,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "_EjEhMElDiDf"
       },
@@ -552,7 +553,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -632,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -697,22 +698,39 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "hJBS83PJeFmG"
+        "id": "hJBS83PJeFmG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "504b5681-17ad-4470-ab4a-f593495b4857"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Starting fold 0\n",
+            "epoch: 1, Train loss: 0.571945,  Train Acc: 0.709315, Val Loss: 0.569534, Val Acc: 0.709070\n",
+            "epoch: 10, Train loss: 0.565753,  Train Acc: 0.713842, Val Loss: 0.568814, Val Acc: 0.709515\n",
+            "epoch: 20, Train loss: 0.565748,  Train Acc: 0.713842, Val Loss: 0.568828, Val Acc: 0.709664\n",
+            "epoch: 30, Train loss: 0.565748,  Train Acc: 0.713866, Val Loss: 0.568831, Val Acc: 0.709639\n",
+            "epoch: 40, Train loss: 0.565748,  Train Acc: 0.713842, Val Loss: 0.568831, Val Acc: 0.709590\n",
+            "epoch: 50, Train loss: 0.565748,  Train Acc: 0.713831, Val Loss: 0.568832, Val Acc: 0.709565\n"
+          ]
+        }
+      ],
       "source": [
         "#For Testing\n",
         "kfold = KFold(n_splits=10, shuffle=True)\n",
-        "kfold.split(dataset)\n",
         "train_loss_history, val_loss_history = [], []\n",
         "val_acc_history = []\n",
-        "for fold, (train_idxs, test_idxs) in enumerate(kfold.split(dataset)):\n",
+        "for fold, (train_idxs, test_idxs) in enumerate(kfold.split(bert_dataset)):\n",
         "\n",
         "    print(f'Starting fold {fold}')\n",
-        "    train_dataset = torch.utils.data.Subset(dataset,train_idxs)\n",
-        "    test_dataset = torch.utils.data.Subset(dataset,test_idxs)\n",
+        "    train_dataset = torch.utils.data.Subset(bert_dataset,train_idxs)\n",
+        "    test_dataset = torch.utils.data.Subset(bert_dataset,test_idxs)\n",
         "    \n",
-        "    fold_train_loss_history, fold_val_loss_history, fold_val_acc_history, epoch_history, _ = train(train_dataset=train_dataset,test_dataset=test_dataset,feature_size=dataset.feature_size)\n",
+        "    fold_train_loss_history, fold_val_loss_history, fold_val_acc_history, epoch_history, _ = train(train_dataset=train_dataset,test_dataset=test_dataset,feature_size=bert_dataset.feature_size)\n",
         "\n",
         "    train_loss_history.append(fold_train_loss_history)\n",
         "    val_loss_history.append(fold_val_loss_history)\n",
