--- a/quora_duplicate_detection.ipynb
+++ b/quora_duplicate_detection.ipynb
@@ -735,7 +735,7 @@
         }
       ],
       "source": [
-        "#For Testing\n",
+        "#For Training Simple Logisitc Regression with Bert\n",
         "\n",
         "model = LogisticModel(bert_dataset.feature_size) \n",
         "\n",
@@ -752,6 +752,87 @@
         "                            model=model,\n",
         "                            params = params,\n",
         "                            print_step=2)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "48\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(bert_dataset.feature_size//2//2//2//2)\n",
+        "class LargerBertNetwork(nn.Module):\n",
+        "    def __init__(self,input_size):\n",
+        "        super(LargerBertNetwork,self).__init__()\n",
+        "        self.layer_1 = nn.Linear(input_size,384)\n",
+        "        self.layer_2 = nn.Linear(384,192)\n",
+        "        self.layer_3 = nn.Linear(192,96)\n",
+        "        self.layer_4 = nn.Linear(192,48)\n",
+        "        self.layer_f = nn.Linear(48,1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = F.relu(self.layer_1(x))\n",
+        "        x = F.relu(self.layer_2(x))\n",
+        "        x = F.relu(self.layer_3(x))\n",
+        "        return F.sigmoid(self.layer_f(x))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "epoch: 1, Train loss: 0.423059,  Train Acc: 0.795541, Val Loss: 0.340300, Val Acc: 0.843046\n",
+            "epoch: 2, Train loss: 0.302856,  Train Acc: 0.863760, Val Loss: 0.323511, Val Acc: 0.853212\n",
+            "epoch: 3, Train loss: 0.265456,  Train Acc: 0.884179, Val Loss: 0.327419, Val Acc: 0.855648\n",
+            "epoch: 4, Train loss: 0.236922,  Train Acc: 0.899128, Val Loss: 0.339292, Val Acc: 0.855562\n",
+            "epoch: 5, Train loss: 0.212623,  Train Acc: 0.911749, Val Loss: 0.359009, Val Acc: 0.853818\n",
+            "epoch: 6, Train loss: 0.191293,  Train Acc: 0.922505, Val Loss: 0.380235, Val Acc: 0.853224\n",
+            "epoch: 7, Train loss: 0.171882,  Train Acc: 0.931824, Val Loss: 0.405964, Val Acc: 0.850800\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[32], line 10\u001b[0m\n\u001b[1;32m      2\u001b[0m model \u001b[39m=\u001b[39m LargerBertNetwork(bert_dataset\u001b[39m.\u001b[39mfeature_size) \n\u001b[1;32m      4\u001b[0m params \u001b[39m=\u001b[39m {  \u001b[39m\"\u001b[39m\u001b[39mloss\u001b[39m\u001b[39m\"\u001b[39m: nn\u001b[39m.\u001b[39mBCELoss(),\n\u001b[1;32m      5\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39moptimizer\u001b[39m\u001b[39m\"\u001b[39m:torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mAdam(model\u001b[39m.\u001b[39mparameters(), lr\u001b[39m=\u001b[39m\u001b[39m1e-4\u001b[39m,betas\u001b[39m=\u001b[39m(\u001b[39m0.9\u001b[39m, \u001b[39m0.999\u001b[39m)),\n\u001b[1;32m      6\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m20\u001b[39m }\n\u001b[1;32m      9\u001b[0m fold_train_loss_history, fold_val_loss_history, \\\n\u001b[0;32m---> 10\u001b[0m     fold_val_acc_history, epoch_history, _ \u001b[39m=\u001b[39m train(\\\n\u001b[1;32m     11\u001b[0m                             train_dataset\u001b[39m=\u001b[39;49mtrain_dataset,\n\u001b[1;32m     12\u001b[0m                             test_dataset\u001b[39m=\u001b[39;49mtest_dataset,\n\u001b[1;32m     13\u001b[0m                             feature_size\u001b[39m=\u001b[39;49mbert_dataset\u001b[39m.\u001b[39;49mfeature_size,\n\u001b[1;32m     14\u001b[0m                             model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m     15\u001b[0m                             params \u001b[39m=\u001b[39;49m params,\n\u001b[1;32m     16\u001b[0m                             print_step\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+            "Cell \u001b[0;32mIn[20], line 40\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(train_dataset, test_dataset, feature_size, model, params, print_step)\u001b[0m\n\u001b[1;32m     37\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     39\u001b[0m \u001b[39m#Save Training Loss and total correct\u001b[39;00m\n\u001b[0;32m---> 40\u001b[0m total_train_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     41\u001b[0m out \u001b[39m=\u001b[39m (pred\u001b[39m>\u001b[39m\u001b[39m0.5\u001b[39m)\u001b[39m.\u001b[39mfloat()\n\u001b[1;32m     42\u001b[0m total_train_correct \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(out\u001b[39m==\u001b[39mbatch_y)\u001b[39m.\u001b[39mfloat()\u001b[39m.\u001b[39msum()\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
+      "source": [
+        "#For Training Largers Model with Bert\n",
+        "model = LargerBertNetwork(bert_dataset.feature_size) \n",
+        "\n",
+        "params = {  \"loss\": nn.BCELoss(),\n",
+        "            \"optimizer\":torch.optim.Adam(model.parameters(), lr=1e-4,betas=(0.9, 0.999)),\n",
+        "            \"epochs\": 20 }\n",
+        "\n",
+        "\n",
+        "fold_train_loss_history, fold_val_loss_history, \\\n",
+        "    fold_val_acc_history, epoch_history, _ = train(\\\n",
+        "                            train_dataset=train_dataset,\n",
+        "                            test_dataset=test_dataset,\n",
+        "                            feature_size=bert_dataset.feature_size,\n",
+        "                            model=model,\n",
+        "                            params = params,\n",
+        "                            print_step=1)"
       ]
     }
   ],
