Added another layer

--- a/quora_duplicate_detection.ipynb
+++ b/quora_duplicate_detection.ipynb
@@ -756,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -775,44 +775,46 @@
         "        self.layer_1 = nn.Linear(input_size,384)\n",
         "        self.layer_2 = nn.Linear(384,192)\n",
         "        self.layer_3 = nn.Linear(192,96)\n",
-        "        self.layer_4 = nn.Linear(192,48)\n",
+        "        self.layer_4 = nn.Linear(96,48)\n",
         "        self.layer_f = nn.Linear(48,1)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = F.relu(self.layer_1(x))\n",
         "        x = F.relu(self.layer_2(x))\n",
         "        x = F.relu(self.layer_3(x))\n",
+        "        x = F.relu(self.layer_4(x))\n",
         "        return F.sigmoid(self.layer_f(x))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "epoch: 1, Train loss: 0.423059,  Train Acc: 0.795541, Val Loss: 0.340300, Val Acc: 0.843046\n",
-            "epoch: 2, Train loss: 0.302856,  Train Acc: 0.863760, Val Loss: 0.323511, Val Acc: 0.853212\n",
-            "epoch: 3, Train loss: 0.265456,  Train Acc: 0.884179, Val Loss: 0.327419, Val Acc: 0.855648\n",
-            "epoch: 4, Train loss: 0.236922,  Train Acc: 0.899128, Val Loss: 0.339292, Val Acc: 0.855562\n",
-            "epoch: 5, Train loss: 0.212623,  Train Acc: 0.911749, Val Loss: 0.359009, Val Acc: 0.853818\n",
-            "epoch: 6, Train loss: 0.191293,  Train Acc: 0.922505, Val Loss: 0.380235, Val Acc: 0.853224\n",
-            "epoch: 7, Train loss: 0.171882,  Train Acc: 0.931824, Val Loss: 0.405964, Val Acc: 0.850800\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[32], line 10\u001b[0m\n\u001b[1;32m      2\u001b[0m model \u001b[39m=\u001b[39m LargerBertNetwork(bert_dataset\u001b[39m.\u001b[39mfeature_size) \n\u001b[1;32m      4\u001b[0m params \u001b[39m=\u001b[39m {  \u001b[39m\"\u001b[39m\u001b[39mloss\u001b[39m\u001b[39m\"\u001b[39m: nn\u001b[39m.\u001b[39mBCELoss(),\n\u001b[1;32m      5\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39moptimizer\u001b[39m\u001b[39m\"\u001b[39m:torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mAdam(model\u001b[39m.\u001b[39mparameters(), lr\u001b[39m=\u001b[39m\u001b[39m1e-4\u001b[39m,betas\u001b[39m=\u001b[39m(\u001b[39m0.9\u001b[39m, \u001b[39m0.999\u001b[39m)),\n\u001b[1;32m      6\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m20\u001b[39m }\n\u001b[1;32m      9\u001b[0m fold_train_loss_history, fold_val_loss_history, \\\n\u001b[0;32m---> 10\u001b[0m     fold_val_acc_history, epoch_history, _ \u001b[39m=\u001b[39m train(\\\n\u001b[1;32m     11\u001b[0m                             train_dataset\u001b[39m=\u001b[39;49mtrain_dataset,\n\u001b[1;32m     12\u001b[0m                             test_dataset\u001b[39m=\u001b[39;49mtest_dataset,\n\u001b[1;32m     13\u001b[0m                             feature_size\u001b[39m=\u001b[39;49mbert_dataset\u001b[39m.\u001b[39;49mfeature_size,\n\u001b[1;32m     14\u001b[0m                             model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m     15\u001b[0m                             params \u001b[39m=\u001b[39;49m params,\n\u001b[1;32m     16\u001b[0m                             print_step\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
-            "Cell \u001b[0;32mIn[20], line 40\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(train_dataset, test_dataset, feature_size, model, params, print_step)\u001b[0m\n\u001b[1;32m     37\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     39\u001b[0m \u001b[39m#Save Training Loss and total correct\u001b[39;00m\n\u001b[0;32m---> 40\u001b[0m total_train_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     41\u001b[0m out \u001b[39m=\u001b[39m (pred\u001b[39m>\u001b[39m\u001b[39m0.5\u001b[39m)\u001b[39m.\u001b[39mfloat()\n\u001b[1;32m     42\u001b[0m total_train_correct \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(out\u001b[39m==\u001b[39mbatch_y)\u001b[39m.\u001b[39mfloat()\u001b[39m.\u001b[39msum()\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "epoch: 1, Train loss: 0.622600,  Train Acc: 0.655581, Val Loss: 0.577482, Val Acc: 0.714537\n",
+            "epoch: 2, Train loss: 0.552665,  Train Acc: 0.728110, Val Loss: 0.527284, Val Acc: 0.743575\n",
+            "epoch: 3, Train loss: 0.492978,  Train Acc: 0.763018, Val Loss: 0.457293, Val Acc: 0.781407\n",
+            "epoch: 4, Train loss: 0.416101,  Train Acc: 0.803370, Val Loss: 0.393502, Val Acc: 0.812882\n",
+            "epoch: 5, Train loss: 0.365036,  Train Acc: 0.830059, Val Loss: 0.364917, Val Acc: 0.828947\n",
+            "epoch: 6, Train loss: 0.339039,  Train Acc: 0.844429, Val Loss: 0.350942, Val Acc: 0.836986\n",
+            "epoch: 7, Train loss: 0.322324,  Train Acc: 0.853418, Val Loss: 0.342395, Val Acc: 0.842279\n",
+            "epoch: 8, Train loss: 0.309502,  Train Acc: 0.860838, Val Loss: 0.336642, Val Acc: 0.846249\n",
+            "epoch: 9, Train loss: 0.298866,  Train Acc: 0.866638, Val Loss: 0.332650, Val Acc: 0.848141\n",
+            "epoch: 10, Train loss: 0.289590,  Train Acc: 0.871827, Val Loss: 0.329822, Val Acc: 0.850132\n",
+            "epoch: 11, Train loss: 0.281248,  Train Acc: 0.876372, Val Loss: 0.327922, Val Acc: 0.852272\n",
+            "epoch: 12, Train loss: 0.273602,  Train Acc: 0.880410, Val Loss: 0.326765, Val Acc: 0.853645\n",
+            "epoch: 13, Train loss: 0.266508,  Train Acc: 0.884352, Val Loss: 0.326228, Val Acc: 0.854622\n",
+            "epoch: 14, Train loss: 0.259828,  Train Acc: 0.887614, Val Loss: 0.326168, Val Acc: 0.855586\n",
+            "epoch: 15, Train loss: 0.253502,  Train Acc: 0.890913, Val Loss: 0.326526, Val Acc: 0.856390\n",
+            "epoch: 16, Train loss: 0.247461,  Train Acc: 0.893915, Val Loss: 0.327349, Val Acc: 0.856947\n",
+            "epoch: 17, Train loss: 0.241656,  Train Acc: 0.896994, Val Loss: 0.328555, Val Acc: 0.857194\n",
+            "epoch: 18, Train loss: 0.236064,  Train Acc: 0.899963, Val Loss: 0.330159, Val Acc: 0.857231\n",
+            "epoch: 19, Train loss: 0.230634,  Train Acc: 0.902510, Val Loss: 0.332040, Val Acc: 0.857577\n",
+            "epoch: 20, Train loss: 0.225363,  Train Acc: 0.905349, Val Loss: 0.334344, Val Acc: 0.857602\n"
           ]
         }
       ],
@@ -821,7 +823,7 @@
         "model = LargerBertNetwork(bert_dataset.feature_size) \n",
         "\n",
         "params = {  \"loss\": nn.BCELoss(),\n",
-        "            \"optimizer\":torch.optim.Adam(model.parameters(), lr=1e-4,betas=(0.9, 0.999)),\n",
+        "            \"optimizer\":torch.optim.Adam(model.parameters(), lr=1e-5,betas=(0.9, 0.999)),\n",
         "            \"epochs\": 20 }\n",
         "\n",
         "\n",
